--- a/style.css
+++ b/style.css
@@ -1,63 +1,86 @@
-
-
+/* Bagian body */
 body {
-    background-color: #dddd;
+  background-color: #dddd;
 }
 
+/* Bagian header */
 header {
-    height: 65px;
-    width: 100%;
-    background-color: rgba(0, 0, 255, 0.349);
-    position :fixed;
-    top: 0;
-    z-index: 10;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  top: 0;
+  width: 100%;
+  background-color: rgba(95, 158, 160, 0.493);
+  z-index: 10;
+  position: fixed;
+  height: 65px;
+  align-items: center;
+  justify-content: space-between;
+  display: flex;
 }
 
-.name-logo-company {
-    text-transform: capitalize;
-    width: auto;
-    cursor: pointer;
-    margin: 12px 24px;
-    padding: 8px 16px;
-    font-weight: 700;
-    margin-left: 25px;
-    font-size: 120%;
+.nav-bar-items {
+  list-style: none;
+  display: flex;
+  margin-right: 25px;
 }
 
-.nav-bar-items{
-    list-style: none;
-    display: flex;
-    margin-right: 25px;
+.nav-bar li {
+  padding: 5px 5px;
 }
 
-.nav-bar li{
-    padding: 16px 16px;
+.nav-bar-items li a {
+  font-weight: 700;
+  font-size: 80%;
+  transition: all 0.5s;
+  line-height: 65px;
+  padding-left: 30px;
+  padding-right: 30px;
+  display: block;
 }
 
-.nav-bar-items li a{
-    font-weight: 700;
-    font-size: 80%;
-    text-transform: capitalize;
-    line-height: 65px;
-    color: white;
-    display: block;
-    float: left;
-    transition: all 0.5s;
-    padding: 0px 25px;
+a {
+  text-decoration: none;
+  color: white;
+  text-transform: capitalize;
 }
 
 .nav-bar-items li a:hover {
-    background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
+.header-right {
+  float: right;
+  margin-right: -25px;
+}
+
+.header-right a {
+  color: white;
+  display: block;
+  float: left;
+
+  font-size: 80%;
+  text-transform: capitalize;
+}
+
+.name-company {
+  text-transform: uppercase;
+  width: auto;
+  font-size: 120%;
+  font-weight: 700;
+  margin-left: 25px;
+  padding: 8px 16px;
+  float: left;
+  color: white;
+  padding: 20px 30px;
+  display: flex;
+}
+.name-company a {
+  cursor: pointer;
+}
+
+/* Bagian footer */
 footer {
-    text-align: center;
-    color: white;
-    background-color: blue;
-    top: 0;
-    padding: 32px;
-    width: 100%;
+  text-align: center;
+  color: black;
+  top: 0;
+  padding: 32px;
+  width: 100%;
 }
