--- a/style.css
+++ b/style.css
@@ -1,86 +1,79 @@
-/* Bagian body */
 body {
-  background-color: #dddd;
+    font-family: 'Open Sans', sans-serif;
+    margin: 0;
 }
 
-/* Bagian header */
-header {
-  top: 0;
+.container {
+    max-width: 1170px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+/* Bagian popular place */
+.popular-tour-wrapper {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    height: 500px;
+    background-color: #EEEEEE;
+}
+
+.popular-tour-wrapper {
+    text-align: center;
+}
+
+.heading h2, h3{
+    font-weight: normal;
+    letter-spacing: 3px;
+}
+
+.place {
+    float: left;
+    width: 25%;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.pic-places {
+    width: 250px;
+    height: 350px;
+    object-fit: cover;
+}
+
+.place-icon {
+    position: relative;
+    color: white;
+}
+
+.place-icon p {
+    position: absolute;
+    top:5%;
+    width: 100%;
+  }
+
+.place-icon h3 {
+  position: absolute;
+  top: 15%;
   width: 100%;
-  background-color: rgba(95, 158, 160, 0.493);
-  z-index: 10;
-  position: fixed;
-  height: 65px;
-  align-items: center;
-  justify-content: space-between;
-  display: flex;
 }
 
-.nav-bar-items {
-  list-style: none;
-  display: flex;
-  margin-right: 25px;
+.btn-wrapper {
+    position: absolute;
+    top: 80%;
+    width: 100%;
 }
 
-.nav-bar li {
-  padding: 5px 5px;
+.btn-wrapper button {
+    background-color: #11468F;
+    border-radius: 5px;
+    border: none;
+    padding: 10px 25px;
+    color: white;
+    font-size: small;   
+    opacity: 0.9;
 }
 
-.nav-bar-items li a {
-  font-weight: 700;
-  font-size: 80%;
-  transition: all 0.5s;
-  line-height: 65px;
-  padding-left: 30px;
-  padding-right: 30px;
-  display: block;
-}
-
-a {
-  text-decoration: none;
-  color: white;
-  text-transform: capitalize;
-}
-
-.nav-bar-items li a:hover {
-  background-color: rgba(255, 255, 255, 0.3);
-}
-
-.header-right {
-  float: right;
-  margin-right: -25px;
-}
-
-.header-right a {
-  color: white;
-  display: block;
-  float: left;
-
-  font-size: 80%;
-  text-transform: capitalize;
-}
-
-.name-company {
-  text-transform: uppercase;
-  width: auto;
-  font-size: 120%;
-  font-weight: 700;
-  margin-left: 25px;
-  padding: 8px 16px;
-  float: left;
-  color: white;
-  padding: 20px 30px;
-  display: flex;
-}
-.name-company a {
-  cursor: pointer;
-}
-
-/* Bagian footer */
-footer {
-  text-align: center;
-  color: black;
-  top: 0;
-  padding: 32px;
-  width: 100%;
+.btn-wrapper button:hover {
+    opacity: 1;
+    cursor: pointer;
+    animation: all 10s;
 }
