update menu toggle

--- a/responsive.css
+++ b/responsive.css
@@ -1,77 +1,52 @@
 /* Mobile */
 @media only screen and (max-width: 576px) {
-    /* Header responsive */
-    nav .logo {
-        margin: 0;
-    }
+  /* Header responsive */
+  header nav {
+    display: none;
+  }
 
-    .menu-toggle {
-        display: flex;
-    }
-    
-    nav ul {
-        position: absolute;
-        right: 0;
-        top: 0;
-        height: 100vh;
-        padding: 70px 10px;
-        flex-direction: column;
-        align-items: left;
-        justify-content: start;
-        background-color: rgb(0, 0, 0);
-        z-index: -1;
-        transform: translateX(100%);
-        transition: all 1s;
-        opacity: 0;
-    }
+  #hamburger-icon {
+    display: block;
+  }
 
-    nav ul li a {
-        font-size: 1em;
-    }
+  /* Content responsive */
+  .place {
+    width: 100%;
+    text-align: center;
+  }
 
-    nav ul.slide {
-        opacity: 1;
-        transform: translateX(0);
-    }
+  .place-icon img {
+    width: 150px;
+    height: 250px;
+  }
 
-    /* Content responsive */
-    .place {
-        width: 100%;
-        text-align: center;
-    }
+  .popular-tour-wrapper {
+    padding-top: 30px;
+    text-align: center;
+  }
 
-    .place-icon img {
-        width: 150px;
-        height: 250px;
-    }
-
-    .popular-tour-wrapper {
-        padding-top: 30px;
-        text-align: center;
-    }
-
-    /* Main responsive */
-    form {
-        padding-top: 20px;
-        width: 100%;
-        margin: 0;
-    }
+  /* Main responsive */
+  form {
+    padding-top: 20px;
+    width: 100%;
+    margin: 0;
+  }
 }
 
 /* Tablet */
 @media only screen and (max-width: 1000px) {
-    nav .logo {
-        margin: 0;
-    }
+  nav .logo {
+    margin: 0;
+  }
 
-    nav ul {
-        width: 50%;
-    }
+  nav ul {
+    width: 50%;
+  }
 
-    /* Content responsive */
-    .place {
-        width: 50%;
-        margin-top: 20px;
-        text-align: center;
-    }
+  /* Content responsive */
+  .place {
+    width: 50%;
+    margin-top: 20px;
+    text-align: center;
+  }
 }
